organização dos arquivos

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-   <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
     <div id="slide-info">Slide 1</div>
     <div id="script-text">Carregando...</div>
-    <script src="renderer.js"></script>
+    <script src="src/renderer.js"></script>
 </body>
 </html>
